# dumpstors

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yml  docker.yml  publish.yml  rust.yml  test.yml
cli/: .gitignore  Cargo.toml
cli/src/: lib.rs  main.rs  query.rs
cli/src/store/: keyspace.rs  mod.rs
cli/tests/: cli_test.rs  common.rs
client/: .gitignore  Cargo.toml
client/src/: main.rs
lib/: .gitignore  Cargo.toml  build.rs
lib/proto/: dumpsters.proto  models.proto  node.proto  store.proto
lib/proto/store/: keyspace.proto  store.proto
lib/src/: lib.rs
lib/src/models/: mod.rs
lib/src/store/: keyspace.rs  mod.rs
server/: .gitignore  Cargo.toml
server/src/: lib.rs  main.rs  node.rs  settings.rs  store.rs
server/src/store/: keyspace.rs  mod.rs  server.rs
