[package]
name = "dumpstors_cli"
version = "0.1.0"
authors = ["Romain Hamel <rom.hml@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4.0"
structopt = "0.3.21"

[dev-dependencies]
tokio-test = "*"

[dependencies.dumpstors_lib]
path = "../lib"

[dev-dependencies.dumpstors]
path = "../server"