[package]
name = "dumpsters_lib"
version = "0.1.0"
authors = ["Romain Hamel <rom.hml@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.6"
tonic = "0.4.0"
prost = "0.7"
prost-types = "0.7"

[build-dependencies]
tonic-build = "0.4.0"
