[package]
name = "dumpstors"
version = "0.1.0"
authors = ["Romain Hamel <rom.hml@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

futures = "0.3.12"
bytes = "1.0.1"
config = "0.10.1"
rayon = "1.5"
serde = "1.0.123"
serde_derive = "1.0.123"
tonic = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.dumpstors_lib]
path = "../lib"

[dev-dependencies]
tokio-test = "*"