[package]
name = "dumpstors"
version = "0.1.0"
authors = ["Romain Hamel <rom.hml@gmail.com>"]
edition = "2018"

[[bin]]
name = "dumpstors"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.3"
futures = "0.3.12"

tonic = "0.4.0"

bytes = "1.0.1"
serde = "1.0.123"
serde_derive = "1.0.123"

config = "0.10.1"
log = "0.4"
env_logger = "0.8.3"

[dependencies.dumpstors_lib]
path = "../lib"

[dev-dependencies]
tokio-test = "*"
uuid = { version = "0.8.2", features = ["v4"] }
